fixed overflow in no zoom environment

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html{background-color:black}
   }
   p{color:darkseagreen;
   position: absolute;
-  top:90vh;
+  top:80vh;
   left:40vw;
     font-size: 1rem;
   }
